--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>jarchivelib</artifactId>
             <version>0.7.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
 
 
